Added food rendering with randomization.

--- a/javascript/snake-game/index.html
+++ b/javascript/snake-game/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="game-container">
-        <!-- <div id="food"><img src="./resources/food.png" alt="food"></div> -->
+        <div id="food"><img src="./resources/food.png" alt="food"></div>
         <div id="head" class="snake-box">
             <img src="./resources/googly-eyes.png" alt="googly-eyes">
         </div>
